--- a/src/components/resources/resources.css
+++ b/src/components/resources/resources.css
@@ -11,6 +11,7 @@ ul {
   text-align: center;
   padding: 0;
   margin: auto;
+  line-height: 200%;
 }
 .jobBoard-card,
 .personalBranding-card,
@@ -24,6 +25,9 @@ ul {
   justify-content: space-around;
   flex-shrink: 3;
   width: 90%;
+  -webkit-box-shadow: -9px 10px 0px 2px rgba(0, 0, 0, 1);
+  -moz-box-shadow: -9px 10px 0px 2px rgba(0, 0, 0, 1);
+  box-shadow: -9px 10px 0px 2px rgba(0, 0, 0, 1);
 }
 .job-head,
 .personal-head,
@@ -34,6 +38,10 @@ ul {
   margin: 0.25em;
   display: flex;
   width: 90%;
+  justify-content: space-around;
+  -webkit-box-shadow: -9px 10px 0px 2px rgba(0, 0, 0, 1);
+  -moz-box-shadow: -9px 10px 0px 2px rgba(0, 0, 0, 1);
+  box-shadow: -9px 10px 0px 2px rgba(0, 0, 0, 1);
 }
 
 @media (min-width: 750px) {
@@ -43,9 +51,10 @@ ul {
     grid-template-rows: 0.1fr 1fr;
     grid-column-gap: 14px;
     grid-row-gap: 13px;
+    justify-items: center;
   }
   .job-head {
-    grid-column: 0/1;
+    grid-column: 1/2;
     grid-row: 1/2;
   }
   .jobBoard-card {
@@ -101,8 +110,9 @@ ul {
   .interview-head,
   .salary-head,
   .tech-head {
-    height: 45%;
+    height: 60%;
     justify-content: center;
+    padding: 5%;
   }
   .jobBoard-card,
   .personalBranding-card,
