--- a/src/components/materials/materials.css
+++ b/src/components/materials/materials.css
@@ -10,4 +10,20 @@
 
 .jsmContainer-button{
     margin-left: 10px;
+
+}
+
+.jsmContainer-row{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.form-group{
+    margin-bottom: 0;
+}
+
+.jsmContainer-row > form{
+    width: 100%;
 }
