--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,29 @@
 
 .nav-link {
-    font-size: 18px;
+    font-size: 20px;
+}
+
+.navbar-text:hover, .nav-link:hover {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
 }
 
 .navbar-brand {
-    font-size: 25px;
+    color: #c38d9e!important;
+    font-size: 30px;
+    font-family: 'Rammetto One', cursive;
 }
 
 .navbar-text > a {
     font-size: 18px;
+    text-decoration: none;
 }
+
+.mr-auto {
+    margin: 0;
+}
+
 
 @media (min-width: 768px) {
 
@@ -23,5 +37,21 @@
 
     .navbar-text > a {
         font-size: calc(1vw + 0.5vh);
+    }
+}
+
+@media (min-width: 1024px) {
+    .nav-link:nth-of-type(2) {
+        margin-left: 2em;
+    }
+
+    .nav-link:nth-of-type(4) {
+        margin-left: 3em;
+        margin-right: 3em;
+    }
+
+    .navbar-brand {
+        font-size: 28px;
+        margin: 0 2em 0 3em;
     }
 }
