--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,15 +13,15 @@
 
 @media (min-width: 768px) {
 
-    .nav-link {
+    .nav-link-scale {
         font-size: calc(1vw + 0.5vh);
     }
 
-    .navbar-brand {
+    .navbar-brand-scale {
         font-size: calc(1vw + 0.75vh);
     }
 
-    .navbar-text > a {
+    .navbar-text-scale > a {
         font-size: calc(1vw + 0.5vh);
     }
 }
