Adding content and styling to no access. Also added user feedback for incorrect username // password

--- a/src/components/landingPage/landingPage.css
+++ b/src/components/landingPage/landingPage.css
@@ -10,8 +10,16 @@
 
 .landingPageContainer{
     display: flex;
+    flex-direction: column;
 }
 
 .landingPage-authContainer{
     margin: 25px;
+}
+
+@media (min-width: 768px){
+    .landingPageContainer{
+        flex-direction: row;
+    }
+
 }
