--- a/src/components/materials/materials.css
+++ b/src/components/materials/materials.css
@@ -2,6 +2,7 @@
     width: 400px;
     margin: 0 auto;
     padding-top: 30px;
+    /*background-color: white;*/
 }
 
 .jsmContainer-inputContainer{
@@ -16,6 +17,9 @@
     margin-left: 10px;
     border-radius: .25rem;
     align-self: stretch;
+    background-color: #41b3a3;
+    color: white;
+    font-weight: bold;
 }
 
 .jsmContainer-row{
@@ -43,6 +47,17 @@
 
 }
 
+.input-group-text{
+    background-color: #c38d9e;
+    color: white;
+    font-weight: bold;
+}
+
+.materials-background{
+    background-image: url("https://res.cloudinary.com/doaftkgbv/image/upload/v1587658644/so-white_bpmwjw.png");
+    height: 100vh;
+}
+
 @media (min-width: 768px){
     .jsmContainer{
         max-width: 900px;
@@ -55,7 +70,8 @@
     }
 
     .jsmContainer-row{
-        width: 100%;
+        width: 90%;
+        margin: 35px auto;
     }
 
     .jsmContainer-inputContainer__label{
@@ -72,5 +88,34 @@
     
     li.nav-item{
         cursor: pointer;
+    }
+
+    .tab-content{
+        border-right: 1px solid #41b3a3;
+        border-bottom: 1px solid #41b3a3;
+        border-left: 1px solid #41b3a3;
+        width: calc(60vw + 22vh);
+        max-width: 899px;
+        margin: 0 auto;
+        box-shadow: 0px 10px 36px -9px rgba(195, 141, 158, 1);
+        background-color: white;
+    }
+
+    .nav-tabs{
+        border-bottom: 1px solid #41b3a3;
+    }
+
+    .nav-tabs .nav-link.active{
+        border-color: #41b3a3 #41b3a3 #ffffff;
+    }
+
+    .jsmContainer-button{
+        background-color: white;
+        color: #41b3a3;
+    }
+
+    .input-group-text{
+        background-color: #e9ecef;
+        color: #495057;
     }
 }
