--- a/src/components/resources/resources.css
+++ b/src/components/resources/resources.css
@@ -1,10 +1,16 @@
 .resources-main {
-  background-color: #e27d60;
+  background-color: #c38d9e;
   text-decoration: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding-top: 1em;
+}
+h1 {
+  font-weight: bold;
+  color: #253b40;
+  text-align: center;
+  text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.33);
 }
 li {
   list-style: none;
@@ -12,13 +18,22 @@ li {
   padding: 0;
   margin: auto;
   line-height: 200%;
+  padding-bottom: 15px;
+  color: #253b40;
+  font-weight: bold;
 }
+a:hover {
+  text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.33);
+  text-decoration: none;
+}
+
 .jobBoard-card,
 .personalBranding-card,
 .resume-card,
 .interview-card,
 .salary-card,
 .tech-card {
+  background-color: #41b3a3;
   padding: 1em;
   margin: 1em;
   display: flex;
@@ -35,6 +50,7 @@ li {
 .interview-head,
 .salary-head,
 .tech-head {
+  background-color: #41b3a3;
   margin: 0.25em;
   display: flex;
   width: 90%;
