--- a/src/components/network/network.css
+++ b/src/components/network/network.css
@@ -1,3 +1,8 @@
+body {
+  background-image: url("https://res.cloudinary.com/doaftkgbv/image/upload/v1587658644/so-white_bpmwjw.png");
+    height: 100vh;
+}
+
 .contact-card {
   margin: 3% auto;
   display: block;
@@ -8,9 +13,9 @@
   width: 90%;
   border-width: 3px;
   border-color: #41B3A3;
-  -webkit-box-shadow: 0px 5px 10px  rgb(71,71,71);
-  -moz-box-shadow: 0px 5px 10px  rgb(71,71,71);
-  box-shadow: 0px 0px 36px -9px rgba(195,141,158,1);
+  -webkit-box-shadow: 0px 5px 10px  #41B3A3;
+  -moz-box-shadow: 0px 5px 10px  #41B3A3;
+  box-shadow: 0px 0px 36px -9px #41B3A3;
 }
 
 
@@ -18,20 +23,12 @@
     color: #C38D9E;
     border-color: #C38D9E;
     border-width: 2px;
-    margin: auto;
+    margin: 3% auto;
     display: block;
     -webkit-box-shadow: 0px 5px 10px  rgb(71,71,71);
   -moz-box-shadow: 0px 5px 10px  rgb(71,71,71);
   box-shadow: 0px 5px 10px  rgb(71,71,71);
 } 
-
-.contact-form {
-    margin: 1em;
-}
-
-.form-row {
-    padding: 3px;
-}
 
 h1 {
   text-align: center;
@@ -48,6 +45,9 @@ h1 {
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
+    color: #C38D9E;
+    font-size: 20px;
+    font-family: 'Rammetto One', cursive;
 }
 
 .contact-form > .form-row:nth-of-type(1) >.col:nth-of-type(1), .contact-form > .form-row:nth-of-type(3) >.col:nth-of-type(1){
@@ -75,12 +75,13 @@ h1 {
   box-shadow: inset 0px 0px 36px -9px rgba(195,141,158,1);
 }
 
-.contact-card {
-  display: block;
-  margin: 3% auto;
-  border: 2px;
-  border-color: #41B3A3;
-  box-shadow: 0px 0px 36px -9px rgba(195,141,158,1);
+.far {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+p > span {
+  font-weight: bold;
 }
 
 .container > .row > .contact-card > .card-header {
@@ -92,13 +93,4 @@ h1 {
 .container > .row > .contact-card > .card-body > p:nth-of-type(2) > a {
   color: #41b3a3;
   text-decoration: none;
-}
-
-.far {
-  display: flex;
-  flex-direction: row-reverse;
-}
-
-p > span {
-  font-weight: bold;
 }
