--- a/src/components/resources/resources.css
+++ b/src/components/resources/resources.css
@@ -21,6 +21,7 @@ li {
   padding-bottom: 15px;
   color: #253b40;
   font-weight: bold;
+  border-bottom: 1px solid #c38d9e;
 }
 a:hover {
   text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.33);
