--- a/src/components/resources/resources.css
+++ b/src/components/resources/resources.css
@@ -12,7 +12,7 @@ h1 {
   text-align: center;
   text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.33);
 }
-li {
+.link {
   list-style: none;
   text-align: center;
   padding: 0;
