--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,14 @@
 
 .nav-link {
     font-size: 20px;
+    color: #c38d9e;
 }
 
 .navbar-text:hover, .nav-link:hover {
     -webkit-transform: scale(0.8);
     -ms-transform: scale(0.8);
     transform: scale(0.8);
+    color: #c38d9e;
 }
 
 .navbar-brand {
@@ -40,7 +42,11 @@
     }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1020px) {
+    .nav {
+        flex-wrap: nowrap;
+    }
+
     .nav-link:nth-of-type(2) {
         margin-left: 2em;
     }
