--- a/src/components/companies/companies.css
+++ b/src/components/companies/companies.css
@@ -3,6 +3,19 @@
     height: 100vh;
 }
 
+h3 {
+    text-align: center;
+    margin: 2% auto;
+    font-weight: bold;
+    color: #ced4da;
+    text-shadow: 1px 1px 2px grey;
+}
+
+.companies > .form-row > .col > .form-group > input {
+    position: relative;
+    z-index: 1;
+}
+
 .companies > .form-row:nth-of-type(1) >.col:nth-of-type(1), .companies > .form-row:nth-of-type(3) >.col:nth-of-type(1){
     padding-right: 0;
 }
@@ -12,14 +25,12 @@
 }
 
 .companies > .form-row:nth-of-type(2){
-    padding: 1% 0 1% 0;
-}
-
-.companies .form-control {
-    border-color: #41b3a3;
+    padding: 1% 0;
 }
 
 .companies > .submit {
+    position: relative;
+    z-index: 1;
     font-weight: bold;
     display: block;
     width: 150px;
@@ -30,13 +41,15 @@
 
 .submit:hover {
     box-shadow: inset 0px 0px 36px -9px rgba(195,141,158,1);
+    color: white;
 }
 
 .companies-card {
     display: block;
-    margin: auto;
+    margin: 2% auto;
     border: none;
     box-shadow: 0px 0px 36px -9px rgba(195,141,158,1);
+    z-index: 1;
 }
 
 .container > .row > .companies-card > .card-header {
@@ -53,8 +66,39 @@
 .far {
     display: flex;
     flex-direction: row-reverse;
+    cursor: pointer;
 }
 
 p > span {
     font-weight: bold;
 }
+
+.Chevron {
+    position: relative;
+    text-align: center;
+    padding: 12px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    height: 400px;
+    width: 100%;
+  }
+  .Chevron:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 50.5%;
+    background: #41b3a3;
+    transform: skew(0deg, 6deg);
+  }
+  .Chevron:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 50%;
+    background: #41b3a3;
+    transform: skew(0deg, -6deg);
+  }
