--- a/src/components/companies/companies.css
+++ b/src/components/companies/companies.css
@@ -3,12 +3,12 @@
     height: 100vh;
 }
 
-h3 {
+.companies-description {
     text-align: center;
-    margin: 2% auto;
+    margin: 4% auto;
     font-weight: bold;
-    color: #ced4da;
-    text-shadow: 1px 1px 2px grey;
+    color: #768987;
+    text-shadow: 0px 4px 7px rgba(0, 0, 0, 0.20);
 }
 
 .companies > .form-row > .col > .form-group > input {
@@ -89,7 +89,7 @@ p > span {
     left: 0;
     height: 100%;
     width: 50.5%;
-    background: #41b3a3;
+    background:  rgba(66, 179, 163, 0.7);
     transform: skew(0deg, 6deg);
   }
   .Chevron:after {
@@ -99,6 +99,6 @@ p > span {
     right: 0;
     height: 100%;
     width: 50%;
-    background: #41b3a3;
+    background:  rgba(66, 179, 163, 0.7);
     transform: skew(0deg, -6deg);
   }
