--- a/src/components/network/network.css
+++ b/src/components/network/network.css
@@ -16,6 +16,7 @@ body {
   -webkit-box-shadow: 0px 5px 10px  #41B3A3;
   -moz-box-shadow: 0px 5px 10px  #41B3A3;
   box-shadow: 0px 0px 36px -9px #41B3A3;
+  z-index: 1;
 }
 
 
@@ -94,4 +95,39 @@ p > span {
 .container > .row > .contact-card > .card-body > p:nth-of-type(2) > a {
   color: #41b3a3;
   text-decoration: none;
+}
+
+.contact-form > .form-row > .col > .form-control {
+  position: relative;
+  z-index: 1;
+}
+
+.network-chevron {
+  position: relative;
+  text-align: center;
+  padding: 12px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  height: 400px;
+  width: 100%;
+}
+.network-chevron:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 50.5%;
+  background:  rgba(195, 141, 158, 0.7);
+  transform: skew(0deg, 6deg);
+}
+.network-chevron:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 50%;
+  background:  rgba(195, 141, 158, 0.7);
+  transform: skew(0deg, -6deg);
 }
