--- a/src/components/network/network.css
+++ b/src/components/network/network.css
@@ -6,6 +6,8 @@ body {
 .contact-card {
   margin: 3% auto;
   display: block;
+  position: relative;
+  z-index: 1;
   justify-content: space-around;
   flex-shrink: 1em;
   text-align: left;
@@ -22,6 +24,7 @@ body {
 .sub-button {
     color: #C38D9E;
     border-color: #C38D9E;
+    width: 50%;
     border-width: 2px;
     margin: 3% auto;
     display: block;
@@ -67,8 +70,8 @@ h1 {
   font-weight: bold;
   display: block;
   width: 150px;
-  color: #c38d9e;
-  border-color: #c38d9e;
+  color: #8aa19e;
+  border-color: #8aa19e;
   margin: 1% auto;
 }
 
@@ -92,6 +95,6 @@ p > span {
 }
 
 .container > .row > .contact-card > .card-body > p:nth-of-type(2) > a {
-  color: #41b3a3;
+  color: #8aa19e;
   text-decoration: none;
 }
