--- a/src/components/resources/resources.css
+++ b/src/components/resources/resources.css
@@ -16,7 +16,7 @@ h1 {
   list-style: none;
   text-align: center;
   padding: 0;
-  margin: auto;
+  margin-top: 1em;
   line-height: 200%;
   padding-bottom: 15px;
   color: #253b40;
