--- a/src/components/resources/resources.css
+++ b/src/components/resources/resources.css
@@ -6,7 +6,7 @@
   justify-content: center;
   padding-top: 1em;
 }
-h1 {
+.card-head {
   font-weight: bold;
   color: #253b40;
   text-align: center;
